--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.300.0",
     "next": "^14.0.0",
     "postcss": "^8.0.0",
@@ -32,6 +34,8 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0"
   }
